# kleinanzeiger

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent_registry.py  background_worker.py  compose.yml  docker-compose.yml  main.py  pyproject.toml  queue_manager.py  skills.py  test_agent.py  tools.py
.github/workflows/: docker-build.yml
skills/kleinanzeigen/: SKILL.md
skills/lunch-planning/: SKILL.md
